--- a/BdNomeIdade/app/src/main/res/layout/conteudo_lista.xml
+++ b/BdNomeIdade/app/src/main/res/layout/conteudo_lista.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textTodosRegistros"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="TextView" />
